<resources>
    <string name="app_name">GulbStudent</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="gulb_about">Gulbenkian is 50 in summer 2019, forged in a time when conventions were being questioned and traditions being challenged. In 1969, The Vietnam War raged, Woodstock raved, man landed on the moon, the Paris student rebellion was fresh in the mind. Young people felt they could change the world, the University of Kent was a hotbed of radical action, using creative thinking to find answers to society’s problems.
\n\n50 years on, Gulbenkian remains an organisation with a radical vision. We believe that young people’s voices must be heard and we are committed to providing time, space and opportunities for them to experiment, discover and create. Time that is squeezed from busy daily life, artistic space that is in short supply here in Kent, precious opportunities to speak up and change the world.
\n\nGulbenkian is a powder keg, where young people, artists, academics and communities meet and exchange ideas. As these new ideas explode, we see confidence grow, careers form, talent get uncovered, work get created and the future unfurl.
\n\nGulbenkian houses a 340 seat theatre, 300 seat cinema and a café which incorporates an informal cabaret style space for live music, comedy and slam poetry. We programme over 1,000 events including music, comedy, theatre, dance and film per year, enjoyed by more than 100,000 people. The arts centre attracts a range of conferences and events to Kent such as BBC Question Time.
\n\nOur work with young people includes the Gulbenkian Youth Theatre with over 100 members aged 5-18 years and Gulbenkian Youth Dance Company, run in partnership with Jasmin Vardimon Company. We are also home to ART31, a cultural leadership project, led by young people, TECH31 , SCREEN31 and TECH(Y)31 plus Kent’s international family festival – bOing!
\n\nA range of companies and artists are based with us including Artswork (South East Bridge), Confidance, Animate Arts Company and the Three Half Pints.
\n\nIn April 2015 we became an Arts Council of England National Portfolio Organisation in recognition of our developing role as a pioneer in the creative empowerment and engagement of children and young people.
\n\nThe University of Kent as the UK’s European University, provides invaluable access to Europe through our campuses in Paris, Brussels, Rome and Athens. Our international outlook and the expertise of international colleagues helps to inform our work and develop best practices through initiatives like ART31 and the bOing! International Family Festival.</string>

    <string name="action_settings">Settings</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>
    <string name="default_channel">Default channel</string>

    <string name="batched_location_updates">Batched location updates</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <string name="geofence_unknown_error">
    Unknown error: the Geofence service is not available now.
  </string>
    <string name="geofence_not_available">
    Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.
  </string>
    <string name="geofence_too_many_geofences">
    Your app has registered too many geofences.
  </string>
    <string name="geofence_too_many_pending_intents">
    You have provided too many PendingIntents to the addGeofences() call.
  </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>

    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="clipboard">Code copied to clipboard</string>
    <string name="event_logo">Event Logo</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="_1_copy_code_to_clipboard">1: Copy code to clipboard</string>
    <string name="_2_click_book_link_to_add_show_to_basket">2: Click book link to add show to basket</string>
    <string name="_3_paste_code_in_at_checkout">3: Paste code in at checkout</string>
    <string name="no_events_for_current_search_term">No events for current search term.</string>
    <string name="welcome_to_the_gulbstudent_android_application">Welcome to The GulbStudent Android Application.</string>
    <string name="gulbstudent_is_a_student_engagement_application_that_allows_students_to_view_and_bookmark_current_and_upcoming_shows_students_can_also_read_a_dedicated_gulbenkian_blog_tailored_to_students_get_notifications_when_new_shows_are_added_their_favourite_categories_enter_competitions_to_win_tickets_to_shows_and_view_exclusive_deals_and_discounts">GulbStudent is a student engagement application that allows students to view and bookmark current and upcoming shows. Students can also read a dedicated Gulbenkian blog tailored to students, get notifications when new shows are added their favourite categories, enter competitions to win tickets to shows, and view exclusive deals and discounts. GulbStudent uses icons from icons9.com</string>
    <string name="gulbstudent_was_developed_by_phoebe_heath_brown_in_2019_for_a_mobile_application_development_msc_dissertation_project">GulbStudent was developed by Phoebe Heath-Brown in 2019 for a Mobile Application Development MSc dissertation project.</string>
    <string name="enter">ENTER</string>
    <string name="no_comps">No competitions currently open. Please check back in a few days.</string>
    <string name="bookmarked_shows">Bookmarked Shows:</string>
    <string name="workshops">Workshops</string>
    <string name="theatre_amp_dance"><![CDATA[Theatre & Dance]]></string>
    <string name="talks">Talks</string>
    <string name="relaxed">Relaxed</string>
    <string name="recorded_amp_live_screening"><![CDATA[Recorded & Live Screening]]></string>
    <string name="music">Music</string>
    <string name="foreign_language_subtitles">Foreign language subtitles</string>
    <string name="festival">Festival</string>
    <string name="family">Family</string>
    <string name="comedy">Comedy</string>
    <string name="captioned_subtitles">Captioned Subtitles</string>
    <string name="cafe">Cafe</string>
    <string name="boing_festival">bOing! Festival</string>
    <string name="audio_described">Audio Described</string>
    <string name="archive">Archive</string>
    <string name="favourited_categories">Favourited Categories:</string>
    <string name="gulbcard_owner">GulbCard owner:</string>
    <string name="save">Save</string>
    <string name="what_s_on">What\'s On</string>
    <string name="deals">Deals</string>
    <string name="win">Win</string>
    <string name="blog">Blog</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="the_gulbenkian">The Gulbenkian</string>
    <string name="gulbcard">GulbCard</string>
    <string name="gulbenkian_uncovered">Gulbenkian Uncovered</string>
    <string name="gulbstudent">GulbStudent</string>
    <string name="sign_out">Sign Out</string>
    <string name="compclosed">Competition closed</string>
    <string name="entered">Entered</string>
    <string name="closedate">Close date:</string>

</resources>
